refactor: :recycle: Refactor code in use case and readme content