@@ -8,11 +8,9 @@ import com.price.manager.back.domain.Price;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
@@ -22,59 +20,62 @@ public class PriceServiceUseCase implements PriceServicePort {
 
     @Override
     public Price findByBrandProductBetweenDate(String brandId, String productId, String dateBetween) {
-        List<Price> prices = listAllByBrandProductBetweenDate(Long.parseLong(brandId), Long.parseLong(productId), dateBetween);
-        if (prices.isEmpty()) {
-            return null;
-        }
-        if (prices.size() > 1) {
-            //Se dejan los elementos de mayor prioridad
-            prices = filterSimilarElementsByPriority(prices);
-            //Si existe mas de uno aún, se dejara al elemento con mayor priceList
-            prices = filterSimilarElementsByPriceList(prices);
-            //Se devuelve un unico objeto
-            return prices.get(0);
-        }
-        return prices.get(0);
+        return Optional.of(new SearchCriteria(brandId, productId, dateBetween))
+                .map(this::listAllByBrandProductBetweenDate)
+                .map(this::filterPrices)
+                .flatMap(prices -> prices.stream()
+                        .findFirst())
+                .orElse(null);
     }
 
-    private List<Price> listAllByBrandProductBetweenDate(Long brandId, Long productId, String dateBetween) {
-        LocalDateTime dateToDateObj = DateUtil.getDateFromString(dateBetween);
-        if (dateToDateObj == null) {
-            return new ArrayList<>();
+    private List<Price> listAllByBrandProductBetweenDate(SearchCriteria criteria) {
+        return Optional.ofNullable(DateUtil.getDateFromString(criteria.dateBetween()))
+                .map(date -> priceRepositoryPort.findAllByBrandIdAndProductIdBetweenDates(
+                        Long.parseLong(criteria.brandId()),
+                        Long.parseLong(criteria.productId()),
+                        date
+                ))
+                .orElse(List.of());
+    }
+
+    private List<Price> filterPrices(List<Price> prices) {
+        if (prices.size() <= 1) {
+            return prices;
         }
-        return priceRepositoryPort.findAllByBrandIdAndProductIdBetweenDates(brandId, productId, dateToDateObj);
+        return Optional.of(prices)
+                .map(this::filterSimilarElementsByPriority)
+                .map(this::filterSimilarElementsByPriceList)
+                .orElse(List.of());
     }
 
     private List<Price> filterSimilarElementsByPriority(List<Price> prices) {
-        //Se recupera valor mas alto del campo
-        Integer maxPriority = getMaxPriority(prices);
-        //Se devuelve lista con filtro aplicado
+        var maxPriority = getMaxPriority(prices);
         return prices.stream()
                 .filter(price -> price.getPriority() >= maxPriority)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<Price> filterSimilarElementsByPriceList(List<Price> prices) {
-        //Se recupera valor mas alto del campo
-        Long maxPriceList = getMaxPriceList(prices);
-        //Se devuelve lista con filtro aplicado
+        var maxPriceList = getMaxPriceList(prices);
         return prices.stream()
                 .filter(price -> price.getPriceList() >= maxPriceList)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Long getMaxPriceList(List<Price> prices) {
         return prices.stream()
-                .max(Comparator.comparing(Price::getPriceList))
-                .orElseGet(Price::new)
-                .getPriceList();
+                .map(Price::getPriceList)
+                .max(Comparator.naturalOrder())
+                .orElse(0L);
     }
 
     private Integer getMaxPriority(List<Price> prices) {
         return prices.stream()
-                .max(Comparator.comparing(Price::getPriority))
-                .orElseGet(Price::new)
-                .getPriority();
+                .map(Price::getPriority)
+                .max(Comparator.naturalOrder())
+                .orElse(0);
     }
+
+    private record SearchCriteria(String brandId, String productId, String dateBetween) {}
 
 }
